TD-4648 Exporting to xelatex characters double underline

--- a/src/Test/XeLatex/TestFiles/Expected/FontVariantNormal.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FontVariantNormal.tex
@@ -29,6 +29,6 @@
 \pagenumbering{arabic} 
 \pagestyle{fancy} 
 
-\letter{\textsc{To test the small }}\normalletter{here without smallcaps}\letter{\textsc{ cap feature}}
+\letter{\textsc{To test the small }}\normalletter{\textsc{here without smallcaps}}\letter{\textsc{ cap feature}}
 
 \end{document}
