--- a/src/Test/XeLatex/TestFiles/Expected/FontBoldItalic.tex
+++ b/src/Test/XeLatex/TestFiles/Expected/FontBoldItalic.tex
@@ -55,7 +55,7 @@
 
 \letterbolditalicletterbolditalicletHeaddicBody{A a - bold italic}
 
-\letterbolditalicunderlineletterbolditalicunderlineletHeaddicBody{\underbar{A a - bold italic underline}}
+\letterbolditalicunderlineletterbolditalicunderlineletHeaddicBody{\underline{A a - bold italic underline}}
 
 \letternormalletternormalletHeaddicBody{A a - Normal 24pt}
 
@@ -65,8 +65,8 @@
 
 \letternormalbolditalicletternormalbolditalicletHeaddicBody{A a - Normal bold italic}
 
-\letternormalunderlineletternormalunderlineletHeaddicBody{\underbar{A a - Normal underline}}
+\letternormalunderlineletternormalunderlineletHeaddicBody{\underline{A a - Normal underline}}
 
-\letternormalbolditalicunderlineletternormalbolditalicunderlineletHeaddicBody{\underbar{A a - Normal bold italic underline}}
+\letternormalbolditalicunderlineletternormalbolditalicunderlineletHeaddicBody{\underline{A a - Normal bold italic underline}}
 
 \end{document}
